--- a/task manager/src/App.css
+++ b/task manager/src/App.css
@@ -2,19 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #2a2c30;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -28,11 +17,35 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  margin: 40px;
+}
+
+#user-registration-link,
+#user-login-link {
+  text-decoration: none;
+  color: orange;
+}
+
+#user-registration-link {
+  margin-right: 2rem;
+}
+
+#user-login-link {
+  margin-left: 2rem;
+}
+
+#user-submit-button {
+  margin: 2rem;
+}
+
+.teacher__section {
+  background-color: red;
+  display: grid;
+}
+
+.cohort-list {
+  display: grid;
+  justify-content: end;
+  padding-right: 1rem;
 }
