--- a/task manager/src/components/users/registration/style.css
+++ b/task manager/src/components/users/registration/style.css
@@ -8,10 +8,28 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-  }
-  
-  .user-form-input {
-    width: 100%;
     background-color: white;
   }
   
+  .user-form-inputs {
+    margin-top: 2rem;
+    padding-top: 1rem;
+  }
+
+  .user-inputs {
+    margin-top: 2rem;
+    background-color: rgb(222, 216, 216);
+  }
+
+  .signup-login, p {
+    color: rgb(255, 221, 0);
+    display: inline;
+    padding-top: 2rem;
+    margin-top: 5rem;
+    font-size: large;
+  }
+
+  .inputs {
+    /* padding-top: 5rem; */
+    margin-top: 0.8rem
+  }
