--- a/task manager client/src/components/sidebar/sidenav.module.css
+++ b/task manager client/src/components/sidebar/sidenav.module.css
@@ -1,7 +1,7 @@
 .sidenav {
     width: 250px;
     transition: width 0.3s ease-in-out;
-    height: 100vh;
+    height: 100hv;
     background-color: rgb(10,25,41);
     padding-top: 28px;
 }
