--- a/task manager client/src/App.css
+++ b/task manager client/src/App.css
@@ -33,7 +33,11 @@ h1 {
   color: orange;
   position: absolute;
   right: 0;
-  margin-right: 1.2rem;
+  margin-right: 1.6rem;
+  border: solid orange 0.1rem;
+  padding: 0.3rem;
+  border-radius: 15px;
+  /* box-shadow: 5px 10px */
 }
 
 /* #user-registration-link {
