--- a/task manager client/src/components/tasks/style.css
+++ b/task manager client/src/components/tasks/style.css
@@ -24,7 +24,9 @@
     width: 300px;
     
     list-style: none;
-    background-color: #716586;
+    /* background-color: #716586; */
+    background-color: orangered;
+    background-image: linear-gradient(/*to right,*/ rgba(231, 231, 206, 0.863), rgba(239, 222, 190, 0.829));
     color: #FFFFF0;
     margin-bottom: 1rem;
     border-radius: 0.2rem;
@@ -43,6 +45,10 @@
     flex-direction: column;
     gap: 1rem;
   }
+
+  .task-wrap, p {
+    color: black;
+  }
   
   .task-header-wrap {
     display: flex;
@@ -58,8 +64,31 @@
   .task-content {
     border: 1px solid grey;
     border-radius: 10px;
-    padding: 0.3rem;
+    /* padding: 0.3rem; */
+    padding: 5px;
     text-align: justify;
+    overflow: hidden;
+    /* text-overflow: ellipsis; */
+  }
+
+  /* .task-content, p {
+
+    text-overflow: ellipsis;
+  } */
+
+  .task-content-select {
+    border: 1px solid grey;
+    border-radius: 10px;
+    /* padding: 0.3rem; */
+    padding: 5px;
+    text-align: justify;
+    overflow: hidden;
+    text-transform: lowercase;
+    color: rgb(34, 40, 201);
+  }
+
+  .task-content-select::first-letter {
+    text-transform: uppercase;
   }
   
   .modify-btn-wrap {
@@ -86,3 +115,56 @@
     width: 24px !important;
     height: 24px !important;
   }
+
+  .topics-list {
+      margin-top: 20px;
+      text-align: start;
+      list-style-type: none;
+  }
+
+  .topic-list-item {
+    display: flex;
+    justify-content: space-between;
+    border-radius: 4px;
+    padding: 0.5rem 1rem;
+    transition: all 300ms;
+    /* margin-top: 5px; */
+  }
+  
+  .topic-list-item:hover .topic-list-item-delete,
+  .topic-list-item:focus-within .topic-list-item-delete {
+    transition: opacity 300ms;
+    opacity: 1;
+    visibility: visible;
+    cursor: pointer;
+  }
+  
+  .topic-list-item:hover,
+  .topic-list-item:focus-within {
+    background-color: #1976d222;
+    transition: all 300ms;
+  }
+  
+  .topic-list-item-delete {
+    transition: opacity 300ms;
+    opacity: 0;
+  }
+  
+  .topic-list-item-delete:hover,
+  .topic-list-item-delete:focus {
+    fill: rgb(182, 1, 1);
+  }
+
+  .class-real {
+    padding: 10p;
+    margin-top: 15px;
+    margin-bottom: 15px
+  }
+
+  .icon-buttons {
+    display: inline-block;
+    padding: 1px
+  }
+  /* .edit-button-wrap .icon {
+    display: inline
+  } */
