--- a/task manager client/src/index.css
+++ b/task manager client/src/index.css
@@ -19,7 +19,7 @@ body {
   /* background-position: center;  */
   background-image: url("./assets/Landing_Page.jpg");
   background-repeat: repeat;
-  background-size: cover;
+  /* background-size: cover; */
   color: #fff;
 }
 
