--- a/task manager client/src/components/header/style.css
+++ b/task manager client/src/components/header/style.css
@@ -1,6 +1,7 @@
 .header-container {
     display: flex;
     background-color: grey;
+    opacity: 60%;
     justify-content: space-between;
     align-items: center;
     width: 100%;
