--- a/task manager client/src/index.css
+++ b/task manager client/src/index.css
@@ -17,9 +17,10 @@ body {
   /* background-color: var(--bg-color); */
   /* background-attachment: fixed; */
   /* background-position: center;  */
-  background-image: url("./assets/Landing_Page.jpg");
+  background-image: url("./assets/Landing.jpg");
   background-repeat: repeat;
-  background-size: cover;
+  opacity: 90%;
+  /* background-size: cover; */
   color: #fff;
 }
 
