--- a/task manager client/src/components/header/style.css
+++ b/task manager client/src/components/header/style.css
@@ -1,10 +1,12 @@
 .header-container {
     display: flex;
-    background-color: grey;
+    /* background-color: grey; */
+    /* opacity: 60%; */
     justify-content: space-between;
     align-items: center;
     width: 100%;
     padding: 1rem;
+    background-image: url("../../assets/header.jpg");
   }
   
   @media screen and (max-width: 700px) {
