--- a/task manager client/src/components/sidebar/sidenav.module.css
+++ b/task manager client/src/components/sidebar/sidenav.module.css
@@ -2,14 +2,14 @@
     width: 250px;
     transition: width 0.3s ease-in-out;
     /* height: max(100vh, 100%); */
-    height: 100vh;
-    background-color: rgba(10, 25, 41, 0.364);
+    height: 90vh;
+    background-color: rgba(10, 25, 41, 0.45);
     padding-top: 28px;
 }
 .sidenavClosed {
     composes: sidenav;
     transition: width 0.3s ease-in-out;
-    width: 60px
+    width: 90px
 }
 .sideitem {
     display: flex;
@@ -22,6 +22,14 @@
 }
 .linkText {
     padding-left: 16px;
+}
+
+p.label-nav {
+    /* color: #1976d2; */
+    color: #d2a119;
+    align-items: left;
+    padding: 10px;
+    /* background-color: white; */
 }
 
 .sideitem:hover {
